zetasql/parser/tree_sitter/test/corpus/aggregation.txt
==================
Test Case 1
==================
select f1, f2 from T where f1=f2 group by f1

/* Expected ZetaSQL AST:
QueryStatement [0-44] [select f1,...group by f1]
  Query [0-44] [select f1,...group by f1]
    Select [0-44] [select f1,...group by f1]
      SelectList [7-13] [f1, f2]
        SelectColumn [7-9] [f1]
          PathExpression [7-9] [f1]
            Identifier(f1) [7-9] [f1]
        SelectColumn [11-13] [f2]
          PathExpression [11-13] [f2]
            Identifier(f2) [11-13] [f2]
      FromClause [14-20] [from T]
        TablePathExpression [19-20] [T]
          PathExpression [19-20] [T]
            Identifier(T) [19-20] [T]
      WhereClause [21-32] [where f1=f2]
        BinaryExpression(=) [27-32] [f1=f2]
          PathExpression [27-29] [f1]
            Identifier(f1) [27-29] [f1]
          PathExpression [30-32] [f2]
            Identifier(f2) [30-32] [f2]
      GroupBy [33-44] [group by f1]
        GroupingItem [42-44] [f1]
          PathExpression [42-44] [f1]
            Identifier(f1) [42-44] [f1]
*/
---
(source_file [0, 0] - [27, 2]
  (statement [0, 0] - [0, 44]
    (select_statement [0, 0] - [0, 44]
      (select_clause [0, 0] - [0, 13]
        (select_list [0, 7] - [0, 13]
          (select_expression [0, 7] - [0, 9]
            (expression [0, 7] - [0, 9]
              (path_expression [0, 7] - [0, 9]
                (identifier [0, 7] - [0, 9]))))
          (select_expression [0, 11] - [0, 13]
            (expression [0, 11] - [0, 13]
              (path_expression [0, 11] - [0, 13]
                (identifier [0, 11] - [0, 13]))))))
      (from_clause [0, 14] - [0, 20]
        (from_item [0, 19] - [0, 20]
          (table_expression [0, 19] - [0, 20]
            (path_expression [0, 19] - [0, 20]
              (identifier [0, 19] - [0, 20])))))
      (where_clause [0, 21] - [0, 32]
        (expression [0, 27] - [0, 32]
          (binary_expression [0, 27] - [0, 32]
            (expression [0, 27] - [0, 29]
              (path_expression [0, 27] - [0, 29]
                (identifier [0, 27] - [0, 29])))
            (expression [0, 30] - [0, 32]
              (path_expression [0, 30] - [0, 32]
                (identifier [0, 30] - [0, 32]))))))
      (group_by_clause [0, 33] - [0, 44]
        (expression_list [0, 42] - [0, 44]
          (expression [0, 42] - [0, 44]
            (path_expression [0, 42] - [0, 44]
              (identifier [0, 42] - [0, 44])))))))
  (comment [2, 0] - [27, 2]))

==================
Test Case 2
==================
select f1, f2 from T group by f1, f2, 1, 2

/* Expected ZetaSQL AST:
QueryStatement [0-42] [select f1,..., f2, 1, 2]
  Query [0-42] [select f1,..., f2, 1, 2]
    Select [0-42] [select f1,..., f2, 1, 2]
      SelectList [7-13] [f1, f2]
        SelectColumn [7-9] [f1]
          PathExpression [7-9] [f1]
            Identifier(f1) [7-9] [f1]
        SelectColumn [11-13] [f2]
          PathExpression [11-13] [f2]
            Identifier(f2) [11-13] [f2]
      FromClause [14-20] [from T]
        TablePathExpression [19-20] [T]
          PathExpression [19-20] [T]
            Identifier(T) [19-20] [T]
      GroupBy [21-42] [group by f1, f2, 1, 2]
        GroupingItem [30-32] [f1]
          PathExpression [30-32] [f1]
            Identifier(f1) [30-32] [f1]
        GroupingItem [34-36] [f2]
          PathExpression [34-36] [f2]
            Identifier(f2) [34-36] [f2]
        GroupingItem [38-39] [1]
          IntLiteral(1) [38-39] [1]
        GroupingItem [41-42] [2]
          IntLiteral(2) [41-42] [2]
*/
---
(source_file [0, 0] - [28, 2]
  (statement [0, 0] - [0, 42]
    (select_statement [0, 0] - [0, 42]
      (select_clause [0, 0] - [0, 13]
        (select_list [0, 7] - [0, 13]
          (select_expression [0, 7] - [0, 9]
            (expression [0, 7] - [0, 9]
              (path_expression [0, 7] - [0, 9]
                (identifier [0, 7] - [0, 9]))))
          (select_expression [0, 11] - [0, 13]
            (expression [0, 11] - [0, 13]
              (path_expression [0, 11] - [0, 13]
                (identifier [0, 11] - [0, 13]))))))
      (from_clause [0, 14] - [0, 20]
        (from_item [0, 19] - [0, 20]
          (table_expression [0, 19] - [0, 20]
            (path_expression [0, 19] - [0, 20]
              (identifier [0, 19] - [0, 20])))))
      (group_by_clause [0, 21] - [0, 42]
        (expression_list [0, 30] - [0, 42]
          (expression [0, 30] - [0, 32]
            (path_expression [0, 30] - [0, 32]
              (identifier [0, 30] - [0, 32])))
          (expression [0, 34] - [0, 36]
            (path_expression [0, 34] - [0, 36]
              (identifier [0, 34] - [0, 36])))
          (expression [0, 38] - [0, 39]
            (number [0, 38] - [0, 39]))
          (expression [0, 41] - [0, 42]
            (number [0, 41] - [0, 42]))))))
  (comment [2, 0] - [28, 2]))

==================
Test Case 3
==================
select f1 from T group by f1 having f1 < 5;

/* Expected ZetaSQL AST:
QueryStatement [0-42] [select f1...having f1 < 5]
  Query [0-42] [select f1...having f1 < 5]
    Select [0-42] [select f1...having f1 < 5]
      SelectList [7-9] [f1]
        SelectColumn [7-9] [f1]
          PathExpression [7-9] [f1]
            Identifier(f1) [7-9] [f1]
      FromClause [10-16] [from T]
        TablePathExpression [15-16] [T]
          PathExpression [15-16] [T]
            Identifier(T) [15-16] [T]
      GroupBy [17-28] [group by f1]
        GroupingItem [26-28] [f1]
          PathExpression [26-28] [f1]
            Identifier(f1) [26-28] [f1]
      Having [29-42] [having f1 < 5]
        BinaryExpression(<) [36-42] [f1 < 5]
          PathExpression [36-38] [f1]
            Identifier(f1) [36-38] [f1]
          IntLiteral(5) [41-42] [5]
*/
---
(source_file [0, 0] - [23, 2]
  (statement [0, 0] - [0, 43]
    (select_statement [0, 0] - [0, 43]
      (select_clause [0, 0] - [0, 9]
        (select_list [0, 7] - [0, 9]
          (select_expression [0, 7] - [0, 9]
            (expression [0, 7] - [0, 9]
              (path_expression [0, 7] - [0, 9]
                (identifier [0, 7] - [0, 9]))))))
      (from_clause [0, 10] - [0, 16]
        (from_item [0, 15] - [0, 16]
          (table_expression [0, 15] - [0, 16]
            (path_expression [0, 15] - [0, 16]
              (identifier [0, 15] - [0, 16])))))
      (group_by_clause [0, 17] - [0, 28]
        (expression_list [0, 26] - [0, 28]
          (expression [0, 26] - [0, 28]
            (path_expression [0, 26] - [0, 28]
              (identifier [0, 26] - [0, 28])))))
      (having_clause [0, 29] - [0, 42]
        (expression [0, 36] - [0, 42]
          (binary_expression [0, 36] - [0, 42]
            (expression [0, 36] - [0, 38]
              (path_expression [0, 36] - [0, 38]
                (identifier [0, 36] - [0, 38])))
            (expression [0, 41] - [0, 42]
              (number [0, 41] - [0, 42])))))))
  (comment [2, 0] - [23, 2]))

==================
Test Case 4
==================
select f1, sum(f2) from T group by f1 having f1 = 3 and sum(f2) > 5;

/* Expected ZetaSQL AST:
QueryStatement [0-67] [select f1,...sum(f2) > 5]
  Query [0-67] [select f1,...sum(f2) > 5]
    Select [0-67] [select f1,...sum(f2) > 5]
      SelectList [7-18] [f1, sum(f2)]
        SelectColumn [7-9] [f1]
          PathExpression [7-9] [f1]
            Identifier(f1) [7-9] [f1]
        SelectColumn [11-18] [sum(f2)]
          FunctionCall [11-18] [sum(f2)]
            PathExpression [11-14] [sum]
              Identifier(sum) [11-14] [sum]
            PathExpression [15-17] [f2]
              Identifier(f2) [15-17] [f2]
      FromClause [19-25] [from T]
        TablePathExpression [24-25] [T]
          PathExpression [24-25] [T]
            Identifier(T) [24-25] [T]
      GroupBy [26-37] [group by f1]
        GroupingItem [35-37] [f1]
          PathExpression [35-37] [f1]
            Identifier(f1) [35-37] [f1]
      Having [38-67] [having f1 = 3 and sum(f2) > 5]
        AndExpr [45-67] [f1 = 3 and sum(f2) > 5]
          BinaryExpression(=) [45-51] [f1 = 3]
            PathExpression [45-47] [f1]
              Identifier(f1) [45-47] [f1]
            IntLiteral(3) [50-51] [3]
          BinaryExpression(>) [56-67] [sum(f2) > 5]
            FunctionCall [56-63] [sum(f2)]
              PathExpression [56-59] [sum]
                Identifier(sum) [56-59] [sum]
              PathExpression [60-62] [f2]
                Identifier(f2) [60-62] [f2]
            IntLiteral(5) [66-67] [5]
*/
---
(source_file [0, 0] - [37, 2]
  (statement [0, 0] - [0, 68]
    (select_statement [0, 0] - [0, 68]
      (select_clause [0, 0] - [0, 18]
        (select_list [0, 7] - [0, 18]
          (select_expression [0, 7] - [0, 9]
            (expression [0, 7] - [0, 9]
              (path_expression [0, 7] - [0, 9]
                (identifier [0, 7] - [0, 9]))))
          (select_expression [0, 11] - [0, 18]
            (expression [0, 11] - [0, 18]
              (function_call [0, 11] - [0, 18]
                (path_expression [0, 11] - [0, 14]
                  (identifier [0, 11] - [0, 14]))
                (function_arguments [0, 15] - [0, 17]
                  (function_argument [0, 15] - [0, 17]
                    (expression [0, 15] - [0, 17]
                      (path_expression [0, 15] - [0, 17]
                        (identifier [0, 15] - [0, 17]))))))))))
      (from_clause [0, 19] - [0, 25]
        (from_item [0, 24] - [0, 25]
          (table_expression [0, 24] - [0, 25]
            (path_expression [0, 24] - [0, 25]
              (identifier [0, 24] - [0, 25])))))
      (group_by_clause [0, 26] - [0, 37]
        (expression_list [0, 35] - [0, 37]
          (expression [0, 35] - [0, 37]
            (path_expression [0, 35] - [0, 37]
              (identifier [0, 35] - [0, 37])))))
      (having_clause [0, 38] - [0, 67]
        (expression [0, 45] - [0, 67]
          (binary_expression [0, 45] - [0, 67]
            (expression [0, 45] - [0, 51]
              (binary_expression [0, 45] - [0, 51]
                (expression [0, 45] - [0, 47]
                  (path_expression [0, 45] - [0, 47]
                    (identifier [0, 45] - [0, 47])))
                (expression [0, 50] - [0, 51]
                  (number [0, 50] - [0, 51]))))
            (expression [0, 56] - [0, 67]
              (binary_expression [0, 56] - [0, 67]
                (expression [0, 56] - [0, 63]
                  (function_call [0, 56] - [0, 63]
                    (path_expression [0, 56] - [0, 59]
                      (identifier [0, 56] - [0, 59]))
                    (function_arguments [0, 60] - [0, 62]
                      (function_argument [0, 60] - [0, 62]
                        (expression [0, 60] - [0, 62]
                          (path_expression [0, 60] - [0, 62]
                            (identifier [0, 60] - [0, 62])))))))
                (expression [0, 66] - [0, 67]
                  (number [0, 66] - [0, 67])))))))))
  (comment [2, 0] - [37, 2]))

==================
Test Case 5
==================
select max(true) as a from T having a;

/* Expected ZetaSQL AST:
QueryStatement [0-37] [select max...T having a]
  Query [0-37] [select max...T having a]
    Select [0-37] [select max...T having a]
      SelectList [7-21] [max(true) as a]
        SelectColumn [7-21] [max(true) as a]
          FunctionCall [7-16] [max(true)]
            PathExpression [7-10] [max]
              Identifier(max) [7-10] [max]
            BooleanLiteral(true) [11-15] [true]
          Alias [17-21] [as a]
            Identifier(a) [20-21] [a]
      FromClause [22-28] [from T]
        TablePathExpression [27-28] [T]
          PathExpression [27-28] [T]
            Identifier(T) [27-28] [T]
      Having [29-37] [having a]
        PathExpression [36-37] [a]
          Identifier(a) [36-37] [a]
*/
---
(source_file [0, 0] - [21, 2]
  (statement [0, 0] - [0, 38]
    (select_statement [0, 0] - [0, 38]
      (select_clause [0, 0] - [0, 21]
        (select_list [0, 7] - [0, 21]
          (select_expression [0, 7] - [0, 21]
            (expression [0, 7] - [0, 16]
              (function_call [0, 7] - [0, 16]
                (path_expression [0, 7] - [0, 10]
                  (identifier [0, 7] - [0, 10]))
                (function_arguments [0, 11] - [0, 15]
                  (function_argument [0, 11] - [0, 15]
                    (expression [0, 11] - [0, 15]
                      (boolean_literal [0, 11] - [0, 15]))))))
            (identifier [0, 20] - [0, 21]))))
      (from_clause [0, 22] - [0, 28]
        (from_item [0, 27] - [0, 28]
          (table_expression [0, 27] - [0, 28]
            (path_expression [0, 27] - [0, 28]
              (identifier [0, 27] - [0, 28])))))
      (having_clause [0, 29] - [0, 37]
        (expression [0, 36] - [0, 37]
          (path_expression [0, 36] - [0, 37]
            (identifier [0, 36] - [0, 37]))))))
  (comment [2, 0] - [21, 2]))

==================
Test Case 6
==================
select sum(sequence s1);

/* Expected ZetaSQL AST:
QueryStatement [0-23] [select sum(sequence s1)]
  Query [0-23] [select sum(sequence s1)]
    Select [0-23] [select sum(sequence s1)]
      SelectList [7-23] [sum(sequence s1)]
        SelectColumn [7-23] [sum(sequence s1)]
          FunctionCall [7-23] [sum(sequence s1)]
            PathExpression [7-10] [sum]
              Identifier(sum) [7-10] [sum]
            SequenceArg [11-22] [sequence s1]
              PathExpression [20-22] [s1]
                Identifier(s1) [20-22] [s1]
*/
---
(source_file [0, 0] - [14, 2]
  (statement [0, 0] - [0, 24]
    (select_statement [0, 0] - [0, 24]
      (select_clause [0, 0] - [0, 23]
        (select_list [0, 7] - [0, 23]
          (select_expression [0, 7] - [0, 23]
            (expression [0, 7] - [0, 23]
              (function_call [0, 7] - [0, 23]
                (path_expression [0, 7] - [0, 10]
                  (identifier [0, 7] - [0, 10]))
                (function_arguments [0, 11] - [0, 22]
                  (function_argument [0, 11] - [0, 22]
                    (expression [0, 20] - [0, 22]
                      (path_expression [0, 20] - [0, 22]
                        (identifier [0, 20] - [0, 22]))))))))))))
  (comment [2, 0] - [14, 2]))

==================
Test Case 7
==================
select sum(sequence `clamped`);

/* Expected ZetaSQL AST:
QueryStatement [0-30] [select sum(sequence `clamped`)]
  Query [0-30] [select sum(sequence `clamped`)]
    Select [0-30] [select sum(sequence `clamped`)]
      SelectList [7-30] [sum(sequence `clamped`)]
        SelectColumn [7-30] [sum(sequence `clamped`)]
          FunctionCall [7-30] [sum(sequence `clamped`)]
            PathExpression [7-10] [sum]
              Identifier(sum) [7-10] [sum]
            SequenceArg [11-29] [sequence `clamped`]
              PathExpression [20-29] [`clamped`]
                Identifier(`clamped`) [20-29] [`clamped`]
*/
---
(source_file [0, 0] - [14, 2]
  (statement [0, 0] - [0, 31]
    (select_statement [0, 0] - [0, 31]
      (select_clause [0, 0] - [0, 30]
        (select_list [0, 7] - [0, 30]
          (select_expression [0, 7] - [0, 30]
            (expression [0, 7] - [0, 30]
              (function_call [0, 7] - [0, 30]
                (path_expression [0, 7] - [0, 10]
                  (identifier [0, 7] - [0, 10]))
                (function_arguments [0, 11] - [0, 29]
                  (function_argument [0, 11] - [0, 29]
                    (expression [0, 20] - [0, 29]
                      (path_expression [0, 20] - [0, 29]
                        (identifier [0, 20] - [0, 29]))))))))))))
  (comment [2, 0] - [14, 2]))

==================
Test Case 8
==================
select sum(sequence clampedx);

/* Expected ZetaSQL AST:
QueryStatement [0-29] [select sum(sequence clampedx)]
  Query [0-29] [select sum(sequence clampedx)]
    Select [0-29] [select sum(sequence clampedx)]
      SelectList [7-29] [sum(sequence clampedx)]
        SelectColumn [7-29] [sum(sequence clampedx)]
          FunctionCall [7-29] [sum(sequence clampedx)]
            PathExpression [7-10] [sum]
              Identifier(sum) [7-10] [sum]
            SequenceArg [11-28] [sequence clampedx]
              PathExpression [20-28] [clampedx]
                Identifier(clampedx) [20-28] [clampedx]
*/
---
(source_file [0, 0] - [14, 2]
  (statement [0, 0] - [0, 30]
    (select_statement [0, 0] - [0, 30]
      (select_clause [0, 0] - [0, 29]
        (select_list [0, 7] - [0, 29]
          (select_expression [0, 7] - [0, 29]
            (expression [0, 7] - [0, 29]
              (function_call [0, 7] - [0, 29]
                (path_expression [0, 7] - [0, 10]
                  (identifier [0, 7] - [0, 10]))
                (function_arguments [0, 11] - [0, 28]
                  (function_argument [0, 11] - [0, 28]
                    (expression [0, 20] - [0, 28]
                      (path_expression [0, 20] - [0, 28]
                        (identifier [0, 20] - [0, 28]))))))))))))
  (comment [2, 0] - [14, 2]))

==================
Test Case 9
==================
select sum(sequence clamped between x and y);

/* Expected ZetaSQL AST:
QueryStatement [0-44] [select sum...between x and y)]
  Query [0-44] [select sum...between x and y)]
    Select [0-44] [select sum...between x and y)]
      SelectList [7-44] [sum(sequence...etween x and y)]
        SelectColumn [7-44] [sum(sequence...etween x and y)]
          FunctionCall [7-44] [sum(sequence...etween x and y)]
            PathExpression [7-10] [sum]
              Identifier(sum) [7-10] [sum]
            PathExpression [11-19] [sequence]
              Identifier(sequence) [11-19] [sequence]
            ClampedBetweenModifier [20-43] [clamped between x and y]
              PathExpression [36-37] [x]
                Identifier(x) [36-37] [x]
              PathExpression [42-43] [y]
                Identifier(y) [42-43] [y]
*/
---
(source_file [0, 0] - [18, 2]
  (statement [0, 0] - [0, 45]
    (select_statement [0, 0] - [0, 45]
      (select_clause [0, 0] - [0, 44]
        (select_list [0, 7] - [0, 44]
          (select_expression [0, 7] - [0, 44]
            (expression [0, 7] - [0, 44]
              (function_call [0, 7] - [0, 44]
                (path_expression [0, 7] - [0, 10]
                  (identifier [0, 7] - [0, 10]))
                (function_arguments [0, 11] - [0, 43]
                  (function_argument [0, 11] - [0, 43]
                    (expression [0, 20] - [0, 43]
                      (between_expression [0, 20] - [0, 43]
                        (expression [0, 20] - [0, 27]
                          (path_expression [0, 20] - [0, 27]
                            (identifier [0, 20] - [0, 27])))
                        (expression [0, 36] - [0, 37]
                          (path_expression [0, 36] - [0, 37]
                            (identifier [0, 36] - [0, 37])))
                        (expression [0, 42] - [0, 43]
                          (path_expression [0, 42] - [0, 43]
                            (identifier [0, 42] - [0, 43]))))))))))))))
  (comment [2, 0] - [18, 2]))

==================
Test Case 10
==================
select sum(1 / sequence clamped between x and y);

/* Expected ZetaSQL AST:
QueryStatement [0-48] [select sum...between x and y)]
  Query [0-48] [select sum...between x and y)]
    Select [0-48] [select sum...between x and y)]
      SelectList [7-48] [sum(1 / sequence...en x and y)]
        SelectColumn [7-48] [sum(1 / sequence...en x and y)]
          FunctionCall [7-48] [sum(1 / sequence...en x and y)]
            PathExpression [7-10] [sum]
              Identifier(sum) [7-10] [sum]
            BinaryExpression(/) [11-23] [1 / sequence]
              IntLiteral(1) [11-12] [1]
              PathExpression [15-23] [sequence]
                Identifier(sequence) [15-23] [sequence]
            ClampedBetweenModifier [24-47] [clamped between x and y]
              PathExpression [40-41] [x]
                Identifier(x) [40-41] [x]
              PathExpression [46-47] [y]
                Identifier(y) [46-47] [y]
*/
---
(source_file [0, 0] - [20, 2]
  (statement [0, 0] - [0, 49]
    (select_statement [0, 0] - [0, 49]
      (select_clause [0, 0] - [0, 48]
        (select_list [0, 7] - [0, 48]
          (select_expression [0, 7] - [0, 48]
            (expression [0, 7] - [0, 48]
              (function_call [0, 7] - [0, 48]
                (path_expression [0, 7] - [0, 10]
                  (identifier [0, 7] - [0, 10]))
                (function_arguments [0, 11] - [0, 23]
                  (function_argument [0, 11] - [0, 23]
                    (expression [0, 11] - [0, 23]
                      (binary_expression [0, 11] - [0, 23]
                        (expression [0, 11] - [0, 12]
                          (number [0, 11] - [0, 12]))
                        (expression [0, 15] - [0, 23]
                          (path_expression [0, 15] - [0, 23]
                            (identifier [0, 15] - [0, 23])))))))
                (clamped_between_modifier [0, 24] - [0, 47]
                  (expression [0, 40] - [0, 41]
                    (path_expression [0, 40] - [0, 41]
                      (identifier [0, 40] - [0, 41])))
                  (expression [0, 46] - [0, 47]
                    (path_expression [0, 46] - [0, 47]
                      (identifier [0, 46] - [0, 47])))))))))))
  (comment [2, 0] - [20, 2]))

==================
Test Case 11
==================
select sum(f1) as a from T having true;

/* Expected ZetaSQL AST:
QueryStatement [0-38] [select sum...having true]
  Query [0-38] [select sum...having true]
    Select [0-38] [select sum...having true]
      SelectList [7-19] [sum(f1) as a]
        SelectColumn [7-19] [sum(f1) as a]
          FunctionCall [7-14] [sum(f1)]
            PathExpression [7-10] [sum]
              Identifier(sum) [7-10] [sum]
            PathExpression [11-13] [f1]
              Identifier(f1) [11-13] [f1]
          Alias [15-19] [as a]
            Identifier(a) [18-19] [a]
      FromClause [20-26] [from T]
        TablePathExpression [25-26] [T]
          PathExpression [25-26] [T]
            Identifier(T) [25-26] [T]
      Having [27-38] [having true]
        BooleanLiteral(true) [34-38] [true]
*/
---
(source_file [0, 0] - [21, 2]
  (statement [0, 0] - [0, 39]
    (select_statement [0, 0] - [0, 39]
      (select_clause [0, 0] - [0, 19]
        (select_list [0, 7] - [0, 19]
          (select_expression [0, 7] - [0, 19]
            (expression [0, 7] - [0, 14]
              (function_call [0, 7] - [0, 14]
                (path_expression [0, 7] - [0, 10]
                  (identifier [0, 7] - [0, 10]))
                (function_arguments [0, 11] - [0, 13]
                  (function_argument [0, 11] - [0, 13]
                    (expression [0, 11] - [0, 13]
                      (path_expression [0, 11] - [0, 13]
                        (identifier [0, 11] - [0, 13])))))))
            (identifier [0, 18] - [0, 19]))))
      (from_clause [0, 20] - [0, 26]
        (from_item [0, 25] - [0, 26]
          (table_expression [0, 25] - [0, 26]
            (path_expression [0, 25] - [0, 26]
              (identifier [0, 25] - [0, 26])))))
      (having_clause [0, 27] - [0, 38]
        (expression [0, 34] - [0, 38]
          (boolean_literal [0, 34] - [0, 38])))))
  (comment [2, 0] - [21, 2]))

==================
Test Case 12
==================
select * from (select a from T having a > 5);

/* Expected ZetaSQL AST:
QueryStatement [0-44] [select * from...having a > 5)]
  Query [0-44] [select * from...having a > 5)]
    Select [0-44] [select * from...having a > 5)]
      SelectList [7-8] [*]
        SelectColumn [7-8] [*]
          Star(*) [7-8] [*]
      FromClause [9-44] [from (select...having a > 5)]
        TableSubquery [14-44] [(select a from T having a > 5)]
          Query [15-43] [select a from T having a > 5]
            Select [15-43] [select a from T having a > 5]
              SelectList [22-23] [a]
                SelectColumn [22-23] [a]
                  PathExpression [22-23] [a]
                    Identifier(a) [22-23] [a]
              FromClause [24-30] [from T]
                TablePathExpression [29-30] [T]
                  PathExpression [29-30] [T]
                    Identifier(T) [29-30] [T]
              Having [31-43] [having a > 5]
                BinaryExpression(>) [38-43] [a > 5]
                  PathExpression [38-39] [a]
                    Identifier(a) [38-39] [a]
                  IntLiteral(5) [42-43] [5]
*/
---
(source_file (ERROR))

==================
Test Case 13
==================
select array_agg(x order by x) as a from T;

/* Expected ZetaSQL AST:
QueryStatement [0-42] [select array_agg...as a from T]
  Query [0-42] [select array_agg...as a from T]
    Select [0-42] [select array_agg...as a from T]
      SelectList [7-35] [array_agg(x order by x) as a]
        SelectColumn [7-35] [array_agg(x order by x) as a]
          FunctionCall [7-30] [array_agg(x order by x)]
            PathExpression [7-16] [array_agg]
              Identifier(array_agg) [7-16] [array_agg]
            PathExpression [17-18] [x]
              Identifier(x) [17-18] [x]
            OrderBy [19-29] [order by x]
              OrderingExpression(ASC) [28-29] [x]
                PathExpression [28-29] [x]
                  Identifier(x) [28-29] [x]
          Alias [31-35] [as a]
            Identifier(a) [34-35] [a]
      FromClause [36-42] [from T]
        TablePathExpression [41-42] [T]
          PathExpression [41-42] [T]
            Identifier(T) [41-42] [T]
*/
---
(source_file (ERROR))

==================
Test Case 14
==================
select array_agg(x order by x, y nulls last, z) as a from T;

/* Expected ZetaSQL AST:
QueryStatement [0-59] [select array_agg...as a from T]
  Query [0-59] [select array_agg...as a from T]
    Select [0-59] [select array_agg...as a from T]
      SelectList [7-52] [array_agg(...last, z) as a]
        SelectColumn [7-52] [array_agg(...last, z) as a]
          FunctionCall [7-47] [array_agg(...nulls last, z)]
            PathExpression [7-16] [array_agg]
              Identifier(array_agg) [7-16] [array_agg]
            PathExpression [17-18] [x]
              Identifier(x) [17-18] [x]
            OrderBy [19-46] [order by x, y nulls last, z]
              OrderingExpression(ASC) [28-29] [x]
                PathExpression [28-29] [x]
                  Identifier(x) [28-29] [x]
              OrderingExpression(ASC) [31-43] [y nulls last]
                PathExpression [31-32] [y]
                  Identifier(y) [31-32] [y]
                NullOrder(NULLS LAST) [33-43] [nulls last]
              OrderingExpression(ASC) [45-46] [z]
                PathExpression [45-46] [z]
                  Identifier(z) [45-46] [z]
          Alias [48-52] [as a]
            Identifier(a) [51-52] [a]
      FromClause [53-59] [from T]
        TablePathExpression [58-59] [T]
          PathExpression [58-59] [T]
            Identifier(T) [58-59] [T]
*/
---
(source_file (ERROR))

==================
Test Case 15
==================
select array_agg(distinct x order by x) as a from T;

/* Expected ZetaSQL AST:
QueryStatement [0-51] [select array_agg...as a from T]
  Query [0-51] [select array_agg...as a from T]
    Select [0-51] [select array_agg...as a from T]
      SelectList [7-44] [array_agg(...by x) as a]
        SelectColumn [7-44] [array_agg(...by x) as a]
          FunctionCall(distinct=true) [7-39] [array_agg(...order by x)]
            PathExpression [7-16] [array_agg]
              Identifier(array_agg) [7-16] [array_agg]
            PathExpression [26-27] [x]
              Identifier(x) [26-27] [x]
            OrderBy [28-38] [order by x]
              OrderingExpression(ASC) [37-38] [x]
                PathExpression [37-38] [x]
                  Identifier(x) [37-38] [x]
          Alias [40-44] [as a]
            Identifier(a) [43-44] [a]
      FromClause [45-51] [from T]
        TablePathExpression [50-51] [T]
          PathExpression [50-51] [T]
            Identifier(T) [50-51] [T]
*/
---
(source_file (ERROR))

==================
Test Case 16
==================
select array_agg(x order by x + 1, y + z) as a from T;

/* Expected ZetaSQL AST:
QueryStatement [0-53] [select array_agg...as a from T]
  Query [0-53] [select array_agg...as a from T]
    Select [0-53] [select array_agg...as a from T]
      SelectList [7-46] [array_agg(...+ z) as a]
        SelectColumn [7-46] [array_agg(...+ z) as a]
          FunctionCall [7-41] [array_agg(...1, y + z)]
            PathExpression [7-16] [array_agg]
              Identifier(array_agg) [7-16] [array_agg]
            PathExpression [17-18] [x]
              Identifier(x) [17-18] [x]
            OrderBy [19-40] [order by x + 1, y + z]
              OrderingExpression(ASC) [28-33] [x + 1]
                BinaryExpression(+) [28-33] [x + 1]
                  PathExpression [28-29] [x]
                    Identifier(x) [28-29] [x]
                  IntLiteral(1) [32-33] [1]
              OrderingExpression(ASC) [35-40] [y + z]
                BinaryExpression(+) [35-40] [y + z]
                  PathExpression [35-36] [y]
                    Identifier(y) [35-36] [y]
                  PathExpression [39-40] [z]
                    Identifier(z) [39-40] [z]
          Alias [42-46] [as a]
            Identifier(a) [45-46] [a]
      FromClause [47-53] [from T]
        TablePathExpression [52-53] [T]
          PathExpression [52-53] [T]
            Identifier(T) [52-53] [T]
*/
---
(source_file (ERROR))

==================
Test Case 17
==================
select x, array_agg(distinct y order by y) from T group by x
